-inputControls: changed layout
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                       placeholder="Insert nucleotide sequences in fasta format here."></textarea>
 
             <div class="input-controls">
-                <a class="interface-button open-sequence" href="#"></a>
+
                 <a class="interface-button input-method" href="#"></a>
                 <a class="interface-button upload-button" href="#">
                     <label class="custom-file-upload">
@@ -213,7 +213,11 @@
                     </label>
                 </a>
                 <a class="interface-button add-sequence" href="#"></a>
-                <a class="interface-button zoom-button" href="#"></a>
+
+                <div class="right">
+                    <a class="interface-button open-sequence" href="#"></a>
+                    <a class="interface-button zoom-button" href="#"></a>
+                </div>
             </div>
         </div>
 
