-basic motif colors has been changed
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
     <!--Github icons - Octicons EXT-->
-    <link rel="stylesheet" href="externalLibs/octicons/octicons.min.css">
+    <!--<link rel="stylesheet" href="externalLibs/octicons/octicons.min.css">-->
 
 
     <!--Google Web Fonts. EXT -->
