- css:default font changed to - Sans serif - .input-controls: changed padding - default demo is disabled now
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -191,11 +191,20 @@
         <div>
             <div class="help-header">Manual</div>
             <div class="help-content">
-                1. Add desired binding models from HOCOMOCO. To do that use search by
-                <a target="_blank" href="http://hocomoco.autosome.ru/human/mono">name or family</a>.
+                To show a basic example click "Demo" button at the top right corner of the window.
+            </div>
+
+            <p></p>
+            <div class="help-content">
+                In order to locate Transcription Factor Binding Sites follow these steps:
             </div>
             <div class="help-content">
-                2. Upload sequence file or type sequences manually. Fasta format is supported.
+                1. Add desired binding models from HOCOMOCO. To do that use search by
+                <a target="_blank" href="http://hocomoco.autosome.ru/human/mono">name or family</a>.
+                <img src="helpImages/search.png" alt="search.png">
+            </div>
+            <div class="help-content">
+                2. Then upload sequence file or type sequences manually. Fasta format is supported.
             </div>
             <div class="help-content">
                 3. Adjust P-value.
