-changed help content -changed HOCOMOCO ajax request to hocomoco11 -changed favicon
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -198,23 +198,30 @@
             <p></p>
             <div class="help-content">
                 In order to locate Transcription Factor Binding Sites follow these steps:
-            </div>
-            <div class="help-content">
-                1. Add desired binding models from HOCOMOCO. To do that use search by
-                <a target="_blank" href="http://hocomoco.autosome.ru/human/mono">name or family</a>.
-                <img src="helpImages/search.png" alt="search.png">
-            </div>
-            <div class="help-content">
-                2. Then upload sequence file or type sequences manually. Fasta format is supported.
-            </div>
-            <div class="help-content">
-                3. Adjust P-value.
-            </div>
-            <div class="help-content">
-                4. If sequences are long enough (100bp+), please wait a moment. We are still working on performance improvements.
-            </div>
-            <div class="help-content">
-                5. Detailed information about binding sites that was found, provided with the table at the bottom of the page.
+
+                <ol class="help-content">
+                    <li>
+                        Add desired binding models from HOCOMOCO. To do that use search by
+                    <a target="_blank" href="http://hocomoco.autosome.ru/human/mono">name or family</a>.
+                    <!--<img src="helpImages/search.png" alt="search.png">-->
+                    </li>
+
+                    <li>
+                        Then upload sequence file or type sequences manually. FASTA format is supported.
+                    </li>
+
+                    <li>
+                        Adjust P-value.
+                    </li>
+
+                    <li>
+                        If sequences are long enough (100bp+), please wait a moment. We are still working on performance improvements.
+                    </li>
+
+                    <li>
+                        Detailed information about binding sites that was found, provided with the table at the bottom of the page.
+                    </li>
+                </ol>
             </div>
         </div>
     </div>
